Fixed form x-bleed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -500,7 +500,7 @@ textarea {
     -moz-box-sizing: content-box;
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
-    width: 95%;
+    width: 92%;
     height: 50px;
     margin: 0.8rem 0em;
     padding: 0rem 1rem;
